Use case button alignment fix

--- a/_sass/partials/use-cases-area.sass
+++ b/_sass/partials/use-cases-area.sass
@@ -86,11 +86,12 @@
 
   &__ctas
     display: flex
-    align-items: baseline
+    align-items: center
     justify-content: flex-start
     padding: rem(12px) 0
 
     .btn
       width: auto
+      margin-bottom: 0
       margin-right: rem(20px)
 
